--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
  
     <section class="main_container">
-        <h2 class="saludo">Bienvenido</h2>
+        <h2 class="saludo">Bienvenido!</h2>
         <img class="logo-principal" src="images/principal.png" alt="images/principal.png">
         
     </section>
